Update file to create a file and put some data into it.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -4,12 +4,11 @@
 # http://docs.ansible.com/ansible/win_updates_module.html
 # https://docs.ansible.com/ansible/win_reboot_module.html
 
-- name:  Windows Update
-  hosts: all
-  gather_facts: false
+- hosts: all
   tasks:
-    - name: Install Firefox
-      win_chocolatey:
-        name: firefox
-        state: present
-	register: result
+  - name: Ansible create file with content example
+    copy:
+      dest: "c:/remote_server.txt"
+      content: |
+        dog1
+        tiger
