Update file to create a file and put some data into it.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -8,5 +8,5 @@
   tasks:
   - name: Ansible create file with content example
     copy:
-    content: '# This file was moved to /etc/other.conf'
+    content: 'This file was moved to /etc/other.conf'
     dest: c:/shashank.txt'
