Update file to create a file and put some data into it.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -7,6 +7,6 @@
 - hosts: all
   tasks:
   - name: Ansible create file with content example
-    copy:
-    content: 'This file was moved to /etc/other.conf'
-    dest: c:/shashank.txt'
+    win_file:
+    path: C:\Temp\foo.conf
+    state: touch
