--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -12,5 +12,5 @@
       state: touch
   - name: Copy using the 'content' for inline data
     copy:
-      content: '# This file was moved to /etc/other.conf'
-      dest: C:\abc.txt'
+      content: 'This file was moved to /etc/other.conf'
+      dest: C:\abc1.txt
