--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -12,5 +12,5 @@
       state: touch
   - name: Copy file to Win Server
     win_copy:
-      src: /root/hlit_him/rpm_repo/Temp_CanDelete
+      src: /root/hlit_him/rpm_repo/Temp_CanDelete.txt
       dest: c:\temp\
