Update file to create a file and put some data into it.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -17,5 +17,5 @@
   - name: Copy file to Win Server
     win_copy:
       #src: /usr/include/python2.7/pyconfig-64.h
-      src: /root/hlit_him/Temp.txt
+      src: /root/NMX_Build/Temp.txt
       dest: c:\temp\
