--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -18,5 +18,5 @@
   - name: Copy file to Win Server
     win_copy:
       #src: /usr/include/python2.7/pyconfig-64.h
-      src: /root/ums-docker-2.4.1.0.37.tar.gz
+      src: /root/anaconda-ks.cfg
       dest: c:\temp\
