--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -10,13 +10,13 @@
     win_file:
       path: C:\abc.txt
       state: touch
-  - name: Copy build to Windows Server
-    win_get_url:
-      url: ftp://Indiaqa@ftp.harmonicinc.com/Shashank_DLL
-      dest: c:\temp\
-      url_username: indiaQA
-      url_password: 4qAprsnt
-    register: get_url_result
+#  - name: Copy build to Windows Server
+#    win_get_url:
+#      url: ftp://Indiaqa@ftp.harmonicinc.com/Shashank_DLL
+#      dest: c:\temp\
+#      url_username: indiaQA
+#      url_password: 4qAprsnt
+#    register: get_url_result
 #  - name: Ansible Delete Directory
 #    win_file:
 #      path: C:\Temp\NMX
@@ -28,11 +28,10 @@
 #      url_username: root
 #      url_password: Pixel!@#
 #    register: get_url_result
-  #- name: Copy file to Win Server
-  #  win_copy:
-  #    src: /root/hlit_him/rpm_repo/ums-docker-2.5.0.0-eng.1111.tar.gz
-  #    dest: c:\temp\
-  #
+   -name: Copy file to Win Server
+    win_copy:
+      src: /usr/include/python2.7
+      dest: c:\temp\
 #  - name: Copy file to Win Server
 #    win_copy:
 #      #src: /usr/include/python2.7/pyconfig-64.h
