--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -30,7 +30,7 @@
 #    register: get_url_result
   - name: Copy file to Win Server
     win_copy:
-      src: /var/lib/awx/projects
+      src: /var/lib/awx/NMXBuild
       dest: c:\temp\
 #  - name: Copy file to Win Server
 #    win_copy:
