--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -33,10 +33,10 @@
       src: /var/lib/rpm
       dest: c:\temp\
     register: win_copy_result
-    when: win_copy_result.failed == False
-      name: Copy successfull
-    when: win_copy_result.failed == True
-      name: Copy un-successfull
+    when: win_copy_result.failed == false
+      - name: Copy successfull
+    when: win_copy_result.failed == true
+      - name: Copy un-successfull
 #  - name: Copy file to Win Server
 #    win_copy:
 #      #src: /usr/include/python2.7/pyconfig-64.h
