Update file to create a file and put some data into it.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -25,7 +25,7 @@
 #      state: absent
   - name: Download file from FTP with authentication
     win_get_url:
-      url: "http://hivy/artifactory/ivy-repos/harmonic/nmx/trunk/{{version}}/ivy.xml"
+      url: "http://hivy/artifactory/ivy-repos/harmonic/nmx/{{version}}/{{build_number}}/ivy.xml"
       dest: c:\temp\
       url_username: "{{username}}"
       url_password: "{{password}}"
