Update file to create a file and put some data into it.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -33,6 +33,7 @@
     win_unzip:
       src: c:\temp\nmx_build_output.zip
       dest: C:\temp\
+      rm:True
 #      creates: C:\temp\NMX
 #  - name: Copy file to Win Server
 #    win_copy:
