Final Playbook to download and install/uninstall.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -5,13 +5,25 @@
 # https://docs.ansible.com/ansible/win_reboot_module.html
 
 - hosts: all
-  vars:
-    my_url: "{{ version }}"
   tasks:
-  - name: Ansible create file with content example
-    win_file:
-      path: C:\abc.txt
-      state: touch
+  - name: Download file from FTP with authentication
+    win_get_url:
+      url: "http://hivy/artifactory/ivy-repos/harmonic/nmx/{{version}}/{{build_number}}/nmx_build_output.zip"
+      dest: c:\temp\
+      url_username: "{{username}}"
+      url_password: "{{password}}"
+  - name: Unzip the NMX folder
+    win_unzip:
+      src: c:\temp\nmx_build_output.zip
+      dest: C:\temp\
+      rm: True
+      creates: C:\temp\NMX
+  - name: Auto Uninstall and Install NMX
+  - name: Get active catalog name
+    win_reg_stat:
+      path: HKLM:\SOFTWARE\Harmonic\MEM
+      name: ServiceSQLServerDSN
+      register: ActiveCatalog
   - name: Create NMXInstall.ini file
     win_copy:
       dest: C:\NMXInstall.ini
@@ -30,39 +42,22 @@
         [Mode]
         Silent=1
         QuickInstall=1
-#  - name: Copy build to Windows Server
-#    win_get_url:
-#      url: ftp://Indiaqa@ftp.harmonicinc.com/Shashank_DLL
-#      dest: c:\temp\
-#      url_username: indiaQA
-#      url_password: 4qAprsnt
-#    register: get_url_result
-#  - name: Ansible Delete Directory
-#    win_file:
-#      path: C:\Temp\NMX
-#      state: absent
-#  - name: Download file from FTP with authentication
-#    win_get_url:
-#      url: "http://hivy/artifactory/ivy-repos/harmonic/nmx/{{version}}/{{build_number}}/nmx_build_output.zip"
-#      dest: c:\temp\
-#      url_username: "{{username}}"
-#      url_password: "{{password}}"
-#  - name: Unzip the NMX folder
-#    win_unzip:
-#      src: c:\temp\nmx_build_output.zip
-#      dest: C:\temp\
-#      rm: True
-#      creates: C:\temp\NMX
-#  - name: Copy file to Win Server
-#    win_copy:
-#      src: "{{url}}"
-#      dest: c:\temp\
-#    register: win_copy_result
-#  - name: Copy file to Win Server
-#    win_copy:
-#      #src: /usr/include/python2.7/pyconfig-64.h
-#      src: /usr/include/python2.7/Temp.txt
-#      dest: c:\temp\ 
-# working url : ftp://Indiaqa@ftp.harmonicinc.com/HATS_installer.zip
-#url_username: indiaQA
-#url_password: 4qAprsnt
+  - name: check if NMX is already installed
+    win_reg_stat:
+      path: HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\{0940EFBB-D1FC-4C6F-91E0-996D9E40B2A2}_is1
+      register: NMX_Installed
+  - name: Uninstall NMX
+    win_package:
+        path: C:\Program Files\Harmonic\unins001.exe
+        product_id: '{0940EFBB-D1FC-4C6F-91E0-996D9E40B2A2}_is1'
+        arguments: /SP- /SILENT /SUPPRESSMSGBOXES
+        reboot_required: true
+        state: absent
+        when: NMX_Installed.exists == true
+  - name: Install NMX
+    win_package:
+      path: C:\Temp\nmx\8.0.0.0.37-A\Install_NMX_8.0.0.0.37-A.exe
+      product_id: '{0940EFBB-D1FC-4C6F-91E0-996D9E40B2A2}_is1'
+      arguments: /SP- /SILENT /SUPPRESSMSGBOXES /Type=ClientAndServer /NDDS_DOMAINID="{{SiteID}}"
+      reboot_required: true
+      state: present
