Final Playbook to download and install/uninstall.

--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -56,7 +56,7 @@
         when: NMX_Installed.exists == true
   - name: Install NMX
     win_package:
-      path: C:\Temp\nmx\8.0.0.0.37-A\Install_NMX_8.0.0.0.37-A.exe
+      path: C:\Temp\nmx\{{build_number}}-A\Install_NMX_{{build_number}}-A.exe
       product_id: '{0940EFBB-D1FC-4C6F-91E0-996D9E40B2A2}_is1'
       arguments: /SP- /SILENT /SUPPRESSMSGBOXES /Type=ClientAndServer /NDDS_DOMAINID="{{SiteID}}"
       reboot_required: true
