--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -11,8 +11,6 @@
       name: CommonFilesDir
       register: common_files_dir
   - debug:
-    var: common_files_dir[value]
+    var: {{common_files_dir.value}}
   - debug:
-    var: CommonFilesDir[value]
-  - debug:
-    var: common_files_dir
+    var: {{common_files_dir}}
