--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -9,8 +9,10 @@
     win_reg_stat:
       path: HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion
       name: CommonFilesDir
-      register: common_files_dir
-  - debug:
-    var: "value is {{common_files_dir.value}}"
-  - debug:
-    var: "all value {{common_files_dir}}"
+    register: common_files_dir
+  - name: Download file from FTP with authentication
+    win_get_url:
+      url: "http://hivy/artifactory/ivy-repos/harmonic/nmx/{{{{common_files_dir.value}}}}/{{build_number}}/nmx_build_output.zip"
+      dest: c:\temp\
+      url_username: "{{username}}"
+      url_password: "{{password}}"
