--- a/Install_Firefox.yml
+++ b/Install_Firefox.yml
@@ -13,5 +13,5 @@
     register: resultFile
   - name: Ansible create file with content example
     win_file:
-      path: "{{resultFile[0].path}}"
+      path: "{{resultFile.files[0].path}}"
       state: absent
